[gd_scene load_steps=15 format=2]

[ext_resource path="res://Bullet.gd" type="Script" id=1]
[ext_resource path="res://player/Bullet.png" type="Texture" id=2]
[ext_resource path="res://Levels/light.png" type="Texture" id=3]
[ext_resource path="res://player/splat.wav" type="AudioStream" id=4]
[ext_resource path="res://player/Boom .png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 15, 13 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "boom",
"speed": 30.0
} ]

[node name="Area2D" type="Area2D" groups=[
"PlayerBullet",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.83578, -0.707905 )
scale = Vector2( 1.48, 1.48 )
frames = SubResource( 9 )
playing = true

[node name="Light2D" type="Light2D" parent="AnimatedSprite"]
position = Vector2( -0.717472, -0.159439 )
scale = Vector2( 1.08751, 1.08751 )
texture = ExtResource( 3 )
texture_scale = 0.2
color = Color( 0.447059, 0.760784, 0.988235, 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 1.284

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
